<resources>
    <string name="app_name">Pregunta(me)</string>
    <string name="pregunta">Pregunta</string>
    <string name="nombre">Nombre</string>
    <string name="enviar">Enviar</string>
    <string name="verde">Bajo</string>
    <string name="amarillo">Medio</string>
    <string name="rojo">Alto</string>
    <string name="textoradio">Indica el nivel de urgencia de tu pregunta</string>
    <string name="title_activity_informacion">informacionActivity</string>
    <string name="password">Contraseña</string>
    <string name="apellido1">Primer Apellido</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="login">login</string>
    <string name="reenviar">Reenviar</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>