<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7A7778"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/required"
        android:layout_width="263dp"
        android:layout_height="30dp"
        android:text=""
        android:textAlignment="center"
        tools:ignore="TextContrastCheck"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/pregunta"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#D1CFCF"
        tools:ignore="TextContrastCheck"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="339dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/textoradio"
        android:textAlignment="center"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="78dp"
        android:layout_height="179dp">

        <RadioButton
            android:id="@+id/verde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/verde"
            android:textColor="#4CAF50"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/amarillo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/amarillo"
            android:textColor="#CDDC39"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rojo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/rojo"
            android:textColor="#F44336"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/enviar"
        android:layout_width="189dp"
        android:layout_height="66dp"
        android:text="@string/enviar" />

</LinearLayout>